Fix contrast ratio for header

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-/* https://coolors.co/c8963e-573d1c-d9ae61-d1462f-94ecbe */
+/* https://coolors.co/c8963e-573d1c-b5852c-d1462f-94ecbe */
 body {
   font-family: "Open Sans", sans-serif;
   margin: 0px;
@@ -20,7 +20,7 @@ body {
   padding: 0.5rem;
   margin-left: 0.5rem;
   color: white;
-  background-color: #d9ae61;
+  background-color: #b5852c;
 }
 
 /* Containers */
